# OnlyKey-gpg-agent

./: Cargo.toml  README.md  auth.pub
.github/workflows/: build_artifacts.yml  release.yml  rust.yml
src/: agent.rs  config.rs  csexp.rs  lib.rs  main.rs  onlykey.rs  utils.rs
src/assuan/: mod.rs  stream.rs
