[package]
name = "ok-gpg-agent"
description = "A cross-platform agent for using OnlyKey"
version = "0.2.0"
edition = "2021"
authors = ["svareille",]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/svareille/OnlyKey-gpg-agent"
repository = "https://github.com/svareille/OnlyKey-gpg-agent"
keywords = ["gpg", "pgp", "onlykey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="*"
base64 = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
config = "*"
crc24 = "0.1.6"
hex = "*"
hidapi = "*"
lazy_static = "*"
log = "*"
num = "*"
num-derive = "*"
num-traits = "*"
rand = "*"
regex = "*"
serde = { version = "1.0", features = ["derive"] }
sha1 = "*"
sha2 = "*"
strum = { version = "0.24", features = ["derive"] }
text_io = "*"
toml = "*"
thiserror = "*"

[target."cfg(windows)".dependencies]
fern = "*"

[target."cfg(not(windows))".dependencies]
fern = { version = "*", features = ["syslog-6"] }
syslog = "6"
daemonize = "*"