[package]
name = "ok-gpg-agent"
description = "A cross-platform agent for using OnlyKey"
version = "0.2.0"
edition = "2021"
authors = ["svareille",]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/svareille/OnlyKey-gpg-agent"
repository = "https://github.com/svareille/OnlyKey-gpg-agent"
keywords = ["gpg", "pgp", "onlykey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="1.0.68"
base64 = "0.21.0"
chrono = "0.4.23"
clap = { version = "4.1", features = ["derive"] }
config = "0.13.3"
crc24 = "0.1.6"
hex = "0.4.3"
hidapi = "2.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
rand = "0.8.5"
regex = "1.7.1"
rpassword = "7.2.0"
sequoia-openpgp = { version = "1.13", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"]}
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.6"
strum = { version = "0.24", features = ["derive"] }
text_io = "0.1.12"
toml = "0.5.10"
thiserror = "1.0.38"

[target."cfg(windows)".dependencies]
fern = "0.6.1"

[target."cfg(not(windows))".dependencies]
fern = { version = "0.6.1", features = ["syslog-6"] }
syslog = "6"
daemonize = "0.4.1"