[package]
name = "ok-gpg-agent"
description = "A cross-platform agent for using OnlyKey"
version = "1.1.1"
edition = "2021"
authors = ["svareille"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/svareille/OnlyKey-gpg-agent"
repository = "https://github.com/svareille/OnlyKey-gpg-agent"
keywords = ["gpg", "pgp", "onlykey"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
config = "0.15.19"
crc24 = "0.1.6"
hex = "0.4.3"
hidapi = "2.6.4"
lazy_static = "1.4.0"
log = "0.4.29"
num = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.15"
rand = "0.9.2"
regex = "1.12.2"
rpassword = "7.4.0"
sequoia-openpgp = { version = "=2.0.0-alpha.1", default-features = false, features = [
    "crypto-rust",
    "allow-experimental-crypto",
    "allow-variable-time-crypto",
] }
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10.5"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
text_io = "0.1.13"
toml = "0.9.8"
thiserror = "2.0.17"

[target."cfg(windows)".dependencies]
fern = "0.7.1"

[target."cfg(not(windows))".dependencies]
fern = { version = "0.7.1", features = ["syslog-7"] }
syslog = "7"
daemonize = "0.5.0"

[profile.release]
opt-level = "s"
lto = true
strip = "symbols"
